fixed light-dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,17 @@
   /* line-height: 1.5;
   font-weight: 400; */
 
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
-/* 
+  color-scheme: light dark;
+
+  --color: #ffffff;
+  --background-color: #242424;
+  color: var(--color);
+  background-color: var(--background-color);
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -28,7 +31,9 @@ body {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --color: #000000;
+    --background-color: #ffffff;
+    color: var(--color);
+    background-color: var(--background-color);
   }
 }
